# tabllet

./: .gitignore
backend/: .dockerignore  .env.example  Dockerfile  compose.dev.yml  compose.yml  pyproject.toml
backend/api/: admin.py  auth.py  ingest.py  models.py  responses.py  serializers.py  services.py  urls.py  views.py
backend/api/integrations/: __init__.py  base.py  hira.py  llm.py  ocr.py
backend/api/migrations/: 0001_initial.py  0002_drugcaution.py
backend/config/: settings.py  urls.py
backend/data/: hira_res.json
frontend/: README.md  capacitor.config.ts  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/src/: app.html
frontend/src/lib/api/: auth.ts  catalog.ts  client.ts  index.ts  prescription.ts
frontend/src/lib/components/: AppHeader.svelte  AppLogo.svelte  BottomNav.svelte  Button.svelte  Card.svelte  ConflictCard.svelte  Icon.svelte  NutrientCard.svelte  Spinner.svelte  StateBlock.svelte  StatusBadge.svelte  Toaster.svelte  UploadDropzone.svelte  index.ts
frontend/src/lib/stores/: auth.svelte.ts  scan.svelte.ts  toast.svelte.ts
frontend/src/lib/types/: api.ts  auth.ts  catalog.ts  index.ts  prescription.ts  scan.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
frontend/src/routes/login/: +page.svelte
frontend/src/routes/prescriptions/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/welcome/: +page.svelte
(+6 files in other folders)
