[project]
name = "tabllet-backend"
version = "0.1.0"
description = "Tabllet backend (Django + Postgres)"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<6.0",
    "djangorestframework>=3.16",
    "psycopg[binary]>=3.2",
    "gunicorn>=23.0",
    "django-environ>=0.12",
    "httpx>=0.28",
    "django-cors-headers>=4.9.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.4",
]

[tool.uv]
package = false
